fix: aligned colors in nav bar and sign up to brand

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-  --background: #ffffff;
+  --background: #F5F1EE ;
   --foreground: #171717;
 }
 
